[package]
name = "mvg"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "Query timetable information and other data about Munich's public transport system"
repository = "https://github.com/ad-8/mvg"
readme = "README.md"
keywords = ["Munich", "Munchen", "public transport", "OPNV", "MVG"]
categories = ["api-bindings"]


[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
